export interface Elements {
    header: HTMLElement;
    cardsContainer: HTMLElement;
    shoppingCart: HTMLElement;
    shoppingCartProducts: HTMLElement;
    footer: HTMLElement
}
/* corregir -> no tienen que ver en común, interfaz mal empleada.
mejor especificar directamente en la vista el DOM*/